[gd_scene load_steps=4 format=2]

[ext_resource path="res://.import/Menu.gd" type="Script" id=1]
[ext_resource path="res://menu/AudioStreamPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/backgroundMenu.jpg" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -67.0
margin_top = -35.0
margin_right = 67.0
margin_bottom = 35.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 67.0229, 34.5177 )
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Gracz vs Gracz" type="Button" parent="VBoxContainer"]
margin_right = 133.0
margin_bottom = 20.0
text = "Gracz vs Gracz"

[node name="Gracz vs Komputer" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 133.0
margin_bottom = 44.0
text = "Gracz vs Komputer"

[node name="Wyjscie" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 133.0
margin_bottom = 68.0
text = "Wyjscie"

[node name="backgroundMusic" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="VBoxContainer/Gracz vs Gracz" to="." method="_on_Gracz_vs_Gracz_pressed"]
[connection signal="pressed" from="VBoxContainer/Gracz vs Komputer" to="." method="_on_Gracz_vs_Komputer_pressed"]
[connection signal="pressed" from="VBoxContainer/Wyjscie" to="." method="_on_Wyjscie_pressed"]
